Did some changes

--- a/ConoPizzaWeb/ConoPizzaWeb.csproj
+++ b/ConoPizzaWeb/ConoPizzaWeb.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="DinkToPdf" Version="1.0.8" />
     <PackageReference Include="EPPlus" Version="7.6.0" />
+    <PackageReference Include="Hashids.net" Version="1.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="9.0.2" />
