--- a/ConoPizzaWeb/appsettings.json
+++ b/ConoPizzaWeb/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "" //Add your connection string here
   },
+  "SecureIds": {
+    "Salt": "YourVerySecureRandomSaltString1234567890"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
